salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/How_Did_You_Hear_About_The_Program__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_The_Program__c</fullName>
    <label>How Did You Hear About The Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ParticipatingContractor</fullName>
            </value>
            <value>
                <fullName>OnlineSearch</fullName>
            </value>
            <value>
                <fullName>EventSeminar</fullName>
            </value>
            <value>
                <fullName>SalesRep</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>