salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/How_You_Heard_About_The_Program__c.field-meta.xml
<CustomField>
    <fullName>How_You_Heard_About_The_Program__c</fullName>
    <label>How You Heard About The Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>