salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/IC_Total_Custom_Project_Incentive__c.field-meta.xml
<CustomField>
    <fullName>IC_Total_Custom_Project_Incentive__c</fullName>
    <label>Project Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express Project</fullName>
            </value>
            <value>
                <fullName>Mainstream Project</fullName>
            </value>
            <value>
                <fullName>M&amp;V Project - Large</fullName>
            </value>
            <value>
                <fullName>M&amp;V Project - New Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>