salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Initial_Review_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_Requested_Date__c</fullName>
    <label>Initial Review Requested Date</label>
    <type>Date</type>
</CustomField>