salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Initial_Tech_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Tech_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Tech Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>