salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Installation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date__c</fullName>
    <label>Installation Start Date</label>
    <type>Date</type>
</CustomField>