salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Interruptible_Account__c.field-meta.xml
<CustomField>
    <fullName>Interruptible_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interruptible Account</label>
    <type>Checkbox</type>
</CustomField>