salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Invoice_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Submitted</label>
    <type>Checkbox</type>
</CustomField>