salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <label>Locked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>