salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/MP_Super_Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>MP_Super_Stage_Status__c</fullName>
    <label>PC Super Stage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Preliminary Offer Letter</fullName>
            </value>
            <value>
                <fullName>Pending Pre-Inspection</fullName>
            </value>
            <value>
                <fullName>Approved for Installation</fullName>
            </value>
            <value>
                <fullName>Pending Post-Inspection</fullName>
            </value>
            <value>
                <fullName>Pending Final Review</fullName>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Complete - Paid</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>