salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Not_Apply_For_Additional_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Not_Apply_For_Additional_Incentives__c</fullName>
    <formula>Apply_For_Additional_Incentives__c  = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Apply For Additional Incentives</label>
    <type>Checkbox</type>
</CustomField>