salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/NTP_CC_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>NTP_CC_Delivered_Date__c</fullName>
    <label>NTP/CC Delivered Date</label>
    <type>Date</type>
</CustomField>