salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Number_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Floors__c</fullName>
    <label>Number Of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>