salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Number_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Number_Square_Footage__c</fullName>
    <label>Number Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>