salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Other_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Override_Reason__c</fullName>
    <label>Incentive Override Reason</label>
    <type>TextArea</type>
</CustomField>