salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Other_Systems__c.field-meta.xml
<CustomField>
    <fullName>Other_Systems__c</fullName>
    <description>Field when user clicks other for Systems</description>
    <label>Other Systems</label>
    <length>200</length>
    <type>Text</type>
</CustomField>