salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Outstanding_Days__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Days__c</fullName>
    <formula>TODAY()  -  POL_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>