salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Packaged_Terminal_Heat_Pump__c.field-meta.xml
<CustomField>
    <fullName>Packaged_Terminal_Heat_Pump__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clean Heat Proposed Technology</description>
    <label>Packaged Terminal Heat Pump</label>
    <type>Checkbox</type>
</CustomField>