salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Partner_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner/Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Partner/Contractor)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>