salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Payee_City__c.field-meta.xml
<CustomField>
    <fullName>Payee_City__c</fullName>
    <label>Payee City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>