salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Payee_Country__c.field-meta.xml
<CustomField>
    <fullName>Payee_Country__c</fullName>
    <label>Payee Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>