salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Payee_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Payee_Street_Address__c</fullName>
    <label>Payee Street Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>