salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Payee_Title__c.field-meta.xml
<CustomField>
    <fullName>Payee_Title__c</fullName>
    <label>Payee Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>