salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Payee_Type__c.field-meta.xml
<CustomField>
    <fullName>Payee_Type__c</fullName>
    <label>Payee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Participating Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>