salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/PB_Years__c.field-meta.xml
<CustomField>
    <fullName>PB_Years__c</fullName>
    <formula>(Total_Net_Cost__c / Annual_Savings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PB(Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>