salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Percent_Building_Heating_Load_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Percent_Building_Heating_Load_Impacted__c</fullName>
    <description>Clean Heat Building Heating Load Specification Field.  Field used for Conga ESign query and template.</description>
    <label>Percent Building Heating Load Impacted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>