salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Percent_Building_Heating_Load_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Percent_Building_Heating_Load_Satisfied__c</fullName>
    <inlineHelpText>Clean Heat Building Load Electrification field.  Field used for Conga ESign query and template.</inlineHelpText>
    <label>Percent Building Heating Load Satisfied</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>