salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/POL_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>POL_Receive_Date__c</fullName>
    <label>POL Receive Date</label>
    <type>Date</type>
</CustomField>