salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Portal_Creation_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_Creation_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Portal Creation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>