salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Post_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Date__c</fullName>
    <label>Post Inspection Date</label>
    <type>Date</type>
</CustomField>