salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Post_Inspection_Findings__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Findings__c</fullName>
    <inlineHelpText>Summary of post inspection findings max length = 500</inlineHelpText>
    <label>Post-Inspection Findings</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>