salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Post_Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Scheduled_Date__c</fullName>
    <description>Date post inspection was Scheduled. Different from when it was completed (Post-Inspection Date)</description>
    <label>Post-Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>