salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/POTs_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>POTs_Team_Notes__c</fullName>
    <label>Operations Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>