salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Pre_Inspection_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Inspection_Complete_Date__c</fullName>
    <label>Pre-Inspection Complete Date</label>
    <type>Date</type>
</CustomField>