salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Pre_Install_Inspection_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Install_Inspection_Completed_Date__c</fullName>
    <label>Pre-inspection site visit</label>
    <type>Date</type>
</CustomField>