salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Id__c</fullName>
    <formula>Primary_Contact__r.Id</formula>
    <label>Primary Contact Id</label>
    <type>Text</type>
</CustomField>