salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Primary_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contractor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please only select 'Participating Contractor' Accounts</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Participating Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Primary Contractor)</relationshipLabel>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>