salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Primary_Project_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Project_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Project Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Primary Project Contact)</relationshipLabel>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>