salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Project_Approved_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Project_Approved_for_Payment__c</fullName>
    <label>Project Approved for Payment Date</label>
    <type>Date</type>
</CustomField>