salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>