salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Project_Systems__c.field-meta.xml
<CustomField>
    <fullName>Project_Systems__c</fullName>
    <label>Project Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boilers</fullName>
            </value>
            <value>
                <fullName>Building Controls and EMS</fullName>
            </value>
            <value>
                <fullName>Building Envelope</fullName>
            </value>
            <value>
                <fullName>Chillers</fullName>
            </value>
            <value>
                <fullName>Compressed Air</fullName>
            </value>
            <value>
                <fullName>Domestic Water Heating</fullName>
            </value>
            <value>
                <fullName>Elevators</fullName>
            </value>
            <value>
                <fullName>Furnaces</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Lighting Controls</fullName>
            </value>
            <value>
                <fullName>Process Upgrades</fullName>
            </value>
            <value>
                <fullName>Pumps, Fans, Piping, and Ducts</fullName>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>Variable Frequency Drives</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>