salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/ProjectCost_Adjusted_Incentive__c.field-meta.xml
<CustomField>
    <fullName>ProjectCost_Adjusted_Incentive__c</fullName>
    <label>Project Cost Adjusted Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>