salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/QAQC_Post_Install_Inspection_Req_Date__c.field-meta.xml
<CustomField>
    <fullName>QAQC_Post_Install_Inspection_Req_Date__c</fullName>
    <label>QAQC Post-Install Inspection Req Date</label>
    <type>Date</type>
</CustomField>