salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Ready_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Pay</label>
    <type>Checkbox</type>
</CustomField>