salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Realized_Power_Reduction_kW__c.field-meta.xml
<CustomField>
    <fullName>Realized_Power_Reduction_kW__c</fullName>
    <label>Realized Power Reduction (kW)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>