salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Rebate_Override__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Override__c</fullName>
    <label>Incentive Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>