salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Reinstatement_Request__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinstatement Request</label>
    <type>Checkbox</type>
</CustomField>