salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Rejection_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Cancellation_Date__c</fullName>
    <label>Rejection/Cancellation Date</label>
    <type>Date</type>
</CustomField>