salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>vlocity_cmt__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Not Signed</fullName>
            </value>
            <value>
                <fullName>Gaps Not Addressed</fullName>
            </value>
            <value>
                <fullName>Offer Not Signed</fullName>
            </value>
            <value>
                <fullName>Post Inspection Not Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>