salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Review_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Complete_Date__c</fullName>
    <label>Review Complete Date</label>
    <type>Date</type>
</CustomField>