salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Review_Summary__c</fullName>
    <label>Review Summary</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>