salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Revised_Expected_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Expected_Project_End_Date__c</fullName>
    <label>Revised Expected Project End Date</label>
    <type>Date</type>
</CustomField>