salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Revised_Installation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Installation_Completion_Date__c</fullName>
    <label>Revised Installation Completion Date</label>
    <type>Date</type>
</CustomField>