salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <formula>(1 / PB_Years__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>