salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Scheduled_from_Portal__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_from_Portal__c</fullName>
    <label>Scheduled from Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>