salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF (Estimated_Consumption_Savings_kWh__c &lt; 10000, 10, 
   IF (Estimated_Consumption_Savings_kWh__c > 50000, 50, 
     IF (Estimated_Consumption_Savings_kWh__c > 100000, 70, 10))) + 
IF (  Estimated_Payment__c > 100000, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>