salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/SEP_Account__c.field-meta.xml
<CustomField>
    <fullName>SEP_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEP Account</label>
    <type>Checkbox</type>
</CustomField>