salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/SOW_Change_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Change_Requested_Date__c</fullName>
    <label>SOW Change Requested Date</label>
    <type>Date</type>
</CustomField>