salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/SOW_Pre_Install_Inspection_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Pre_Install_Inspection_Request_Date__c</fullName>
    <label>SOW Pre-Install Inspection Request Date</label>
    <type>Date</type>
</CustomField>