salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <label>Square Footage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>