salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Steam_Annualized_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Steam_Annualized_Consumption__c</fullName>
    <label>Steam Annualized Consumption</label>
    <length>30</length>
    <type>Text</type>
</CustomField>