salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Strategic_Energy_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Energy_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Strategic Energy Partnership related to this Project.</description>
    <inlineHelpText>This field contains the Strategic Energy Partnership related to this Project.</inlineHelpText>
    <label>Strategic Energy Partnership</label>
    <referenceTo>Strategic_Energy_Partnership__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>