salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Summary_Of_Scope__c.field-meta.xml
<CustomField>
    <fullName>Summary_Of_Scope__c</fullName>
    <label>Summary Of Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>